--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -11,7 +11,9 @@
         app:srcCompat="?android:attr/alertDialogIcon"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         />
 
     <TextView
@@ -21,6 +23,7 @@
         android:layout_toRightOf="@id/movie_image"
         android:layout_alignParentTop="true"
         android:maxLines="1"
+        android:layout_marginTop="3dp"
         />
 
     <TextView
@@ -30,6 +33,7 @@
         android:layout_alignLeft="@id/movie_text_1"
         android:layout_below="@id/movie_text_1"
         android:maxLines="1"
+        android:layout_marginTop="3dp"
         />
 
     <TextView
@@ -40,6 +44,7 @@
         android:layout_below="@id/movie_text_2"
         android:maxLines="3"
         android:ellipsize="end"
+        android:layout_marginTop="3dp"
         />
 
 </RelativeLayout>
