--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -41,30 +41,34 @@
             android:layout_toRightOf="@id/image"
             android:layout_marginTop="10dp"
             >
+
             <TextView
                 android:id="@+id/text1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
             <TextView
                 android:id="@+id/text2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
             <TextView
                 android:id="@+id/text3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
             <TextView
                 android:id="@+id/text4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                />
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
         </LinearLayout>
         
     </RelativeLayout>
@@ -74,6 +78,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        />
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 </LinearLayout>
 </ScrollView>
