--- a/app/src/main/res/layout/genre_grid_item.xml
+++ b/app/src/main/res/layout/genre_grid_item.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     >
 
     <ImageView
         android:id="@+id/genre_image"
-        android:layout_width="match_parent"
-        android:layout_height="118dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:scaleType="fitXY"
         app:srcCompat="@android:drawable/ic_dialog_alert"
         />
 
