--- a/app/src/main/res/layout/fragment_edit_watched_movie.xml
+++ b/app/src/main/res/layout/fragment_edit_watched_movie.xml
@@ -9,6 +9,14 @@
     >
 
     <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
+
+    <TextView
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
