--- a/app/src/main/res/layout/fragment_edit_watched_movie.xml
+++ b/app/src/main/res/layout/fragment_edit_watched_movie.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/score"
+            android:id="@+id/score_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -30,7 +30,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
         <RatingBar
-            android:id="@+id/rating"
+            android:id="@+id/rating_bar"
             style="?android:attr/ratingBarStyleIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
             />
 
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/date_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
